services page done

--- a/services.html
+++ b/services.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us – Alabasteria Cleaning Services</title>
-  <link rel="icon" href="Images/Logo-3.ico" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alabasteria Cleaning Services</title>
+    <link rel="icon" href="Images/Logo-3.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
       <div class="container2">
         <img src="Images/Logo.png" alt="Alabasteria Cleaning Services Logo" class="logo">
+  
         <div class="header-content">
         <div class="title-text">
           <h1>Alabasteria Cleaning Services</h1>
@@ -31,8 +32,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="#contact" class="btn">Contact Us</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="contact.html" class="btn">Contact Us</a></li>
             </ul>
           </nav>
             <label for="navToggler" class="navTogglerMenu" name="navToggler">
@@ -62,28 +63,54 @@
   <p class="disclaimer">*These services were performed as an independent contractor through City Wide Facility Solutions.</p>
 </section>
 
-  <div class="iframe-wrapper">
-    <iframe
-      id="JotFormIFrame-251877975036168"
-      title="Free Client Consultation"
-      onload="window.parent.scrollTo(0,0)"
-      allowtransparency="true"
-      allow="geolocation; microphone; camera; fullscreen; payment"
-      src="https://form.jotform.com/251877975036168"
-      frameborder="0"
-      style="min-width:100%;max-width:100%;height:539px;border:none;"
-      scrolling="no"
-    ></iframe>
-  </div>
+<div class="container">
+    <section class="services-page">
+    <h1>FOR THOSE WHO INSIST ON THE BEST…<br><span class="services-highlight">OUR SERVICES</span></h1>
+    <p class="services-intro">
+        We offer a range of tailored cleaning solutions for offices, commercial spaces, and specialty needs. Every job is handled with the highest care, eco-friendly products, and a dedication to spotless results.
+    </p>
 
-  <script src="https://cdn.jotfor.ms/s/umd/latest/for-form-embed-handler.js"></script>
-  <script>
-    window.jotformEmbedHandler("iframe[id='JotFormIFrame-251877975036168']", "https://form.jotform.com/");
-  </script>
+    <div class="service-category">
+        <h2>Offices / Commercial</h2>
+        <ul>
+        <li>Office Cleaning</li>
+        <li>Medical Facility Cleaning</li>
+        <li>Janitorial Services</li>
+        <li>Hard Floor Stripping & Waxing</li>
+        <li>Carpet Cleaning</li>
+        <li>Green Cleaning Services</li>
+        <li>Day Porter Services</li>
+        </ul>
+    </div>
 
-  <footer>
+    <div class="service-category">
+        <h2>Specialty</h2>
+        <ul>
+        <li>Initial Cleaning</li>
+        <li>Special Event Cleaning</li>
+        <li>Upholstery & Furniture Cleaning</li>
+        <li>Disinfecting Services</li>
+        </ul>
+    </div>
+
+    <section class="mini-guarantee">
+        <h3>Our Promise to You</h3>
+        <p>
+            Every service is backed by our satisfaction guarantee — we stand by the quality of our work and your complete peace of mind.
+        </p>
+        <p>
+            Learn more about what sets us apart on our 
+            <a href="why-choose-us.html" class="why-us-link">Why Choose Us</a> page.
+        </p>
+    </section>
+
+    <a href="contact.html" class="quote-cta">Not sure what you need? Get a Free Quote</a>
+    </section>
+</div>
+
+    <footer>
   &copy; 2024 Alabasteria Cleaning Services. All rights reserved.<br>
-  <small>Hours: Mon–Fri 8am–6pm | Sat 9am–2pm | Sun Closed</small>
+  <small>Hours: Mon–Fri 8am–6pm | Sat Closed | Sun 9am-1pm</small>
 </footer>
 </body>
 </html>
