--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul>
                 <li><a href="#index">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html" class="btn">Contact Us</a></li>
             </ul>
           </nav>
