why us page done!

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li><a href="#index">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="why.html">Why Us?</a></li>
                 <li><a href="contact.html" class="btn">Contact Us</a></li>
             </ul>
           </nav>
@@ -194,7 +195,7 @@
 </section>
 
     </div>
-    <footer>
+<footer>
   &copy; 2024 Alabasteria Cleaning Services. All rights reserved.<br>
   <small>Hours: Mon–Fri 8am–6pm | Sat Closed | Sun 9am-1pm</small>
 </footer>
