--- a/why.html
+++ b/why.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us – Alabasteria Cleaning Services</title>
-  <link rel="icon" href="Images/Logo-3.ico" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alabasteria Cleaning Services</title>
+    <link rel="icon" href="Images/Logo-3.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
       <div class="container2">
         <img src="Images/Logo.png" alt="Alabasteria Cleaning Services Logo" class="logo">
+  
         <div class="header-content">
         <div class="title-text">
           <h1>Alabasteria Cleaning Services</h1>
@@ -33,7 +34,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="why.html">Why Us?</a></li>
-                <li><a href="#contact" class="btn">Contact Us</a></li>
+                <li><a href="contact.html" class="btn">Contact Us</a></li>
             </ul>
           </nav>
             <label for="navToggler" class="navTogglerMenu" name="navToggler">
@@ -62,29 +63,53 @@
   </div>
   <p class="disclaimer">*These services were performed as an independent contractor through City Wide Facility Solutions.</p>
 </section>
+    <div class="container">
+<section class="why-choose-us">
+  <h1>Why Choose Us?</h1>
 
-  <div class="iframe-wrapper">
-    <iframe
-      id="JotFormIFrame-251877975036168"
-      title="Free Client Consultation"
-      onload="window.parent.scrollTo(0,0)"
-      allowtransparency="true"
-      allow="geolocation; microphone; camera; fullscreen; payment"
-      src="https://form.jotform.com/251877975036168"
-      frameborder="0"
-      style="min-width:100%;max-width:100%;height:539px;border:none;"
-      scrolling="no"
-    ></iframe>
+  <p>
+    At Alabasteria Cleaning Services, we know that maintaining a clean building isn’t just about appearances — it’s about protecting your business.
+  </p>
+
+  <p>
+    We’re a <strong>family-owned company</strong> that takes every job seriously because we know what it’s like to build something from the ground up.
+  </p>
+
+  <p>
+    We’ve cleaned offices, schools, and worked with large organizations like the YMCA and local car dealerships — places that demand strict attention to detail, fast-paced cleaning, and total trust.
+  </p>
+
+  <h2>Why businesses choose us:</h2>
+
+  <ul>
+    <li><strong>Cleaner spaces mean fewer accidents.</strong> A well-maintained facility helps reduce slip and fall risks — protecting your people and your bottom line.</li>
+    <li><strong>Healthier environments mean fewer sick days.</strong> Regular disinfecting keeps viruses at bay, so your staff stays healthier and your operations keep moving.</li>
+    <li><strong>A clean building reflects professionalism.</strong> Clients, customers, and employees notice — and it shows you care about your business.</li>
+    <li><strong>Clean buildings cost less to maintain.</strong> Dirt and buildup can wear down surfaces fast — we help prevent costly repairs with consistent care.</li>
+  </ul>
+
+  <p>
+    We don’t cut corners — we clean them. And because we’re a family business, you’ll never feel like just another account. We’re reliable, flexible, and genuinely care about your space.
+  </p>
+
+  <p>
+    If you want a cleaning team that’s experienced, trustworthy, and invested in your facility’s quality — we’re here for you, so you can focus on what you do best and leave the cleaning to us.
+  </p>
+
+  <p class="slogan">
+    <strong>“Because clean should never be a question.”</strong>
+  </p>
+
+  <div class="why-us-contact">
+    <a href="contact.html" class="quote-cta">Ready to get started? Contact Us Now </a>
   </div>
+</section>
 
-  <script src="https://cdn.jotfor.ms/s/umd/latest/for-form-embed-handler.js"></script>
-  <script>
-    window.jotformEmbedHandler("iframe[id='JotFormIFrame-251877975036168']", "https://form.jotform.com/");
-  </script>
+    </div>
 
-  <footer>
+<footer>
   &copy; 2024 Alabasteria Cleaning Services. All rights reserved.<br>
-  <small>Hours: Mon–Fri 8am–6pm | Sat 9am–2pm | Sun Closed</small>
+  <small>Hours: Mon–Fri 8am–6pm | Sat Closed | Sun 9am-1pm</small>
 </footer>
 </body>
 </html>
