--- a/services.html
+++ b/services.html
@@ -33,6 +33,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
+                <li><a href="why.html">Why Us?</a></li>
                 <li><a href="contact.html" class="btn">Contact Us</a></li>
             </ul>
           </nav>
