--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <nav>
             <ul>
                 <li><a href="#index">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="why.html">Why Us?</a></li>
                 <li><a href="contact.html" class="btn">Contact Us</a></li>
