--- a/services.html
+++ b/services.html
@@ -31,8 +31,8 @@
           <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="why.html">Why Us?</a></li>
                 <li><a href="contact.html" class="btn">Contact Us</a></li>
             </ul>
