--- a/about.html
+++ b/about.html
@@ -100,44 +100,68 @@
   <h2 class="meet-title">Meet</h2>
   <h3 class="owner-name">Angel Tibbs</h3>
 
-  <div class="meet-owner">
-    <img src="Images/Angel-Tibbs.jpg" alt="Angel Tibbs" class="owner-photo">
-    <div class="owner-bio">
-      <p>
-        As the founder and director of Alabasteria Cleaning Services, I believe that care is just as important as consistency.
-        I’ve always believed that a clean space isn’t just about making things look nice — it’s about creating a safe, healthy,
-        and productive environment where people feel respected.
-      </p>
-      <p>
-        I started this company alongside my family, inspired by my mom’s more than 10 years of experience in the cleaning industry.
-        From the very beginning, I’ve been involved in every part of the business — from scheduling and operations to hands-on training
-        — to make sure we deliver the kind of service I would want for my own community.
-      </p>
-      <p>
-        My promise to you is simple: we’ll treat your space like it matters — because it does. We’ll listen, adapt, and always
-        show up ready to give you our best.
-      </p>
-
-      <div class="owner-resume">
-        <h4>About Me</h4>
-        <ul>
-          <li>Associate’s Degree in Pre-Nursing – Fullerton College (2024)</li>
-          <li>Certificate in Small Business Growth – San Diego Continuing Education</li>
-          <li>Current Nursing Student – San Diego City College</li>
-          <li>Self-taught business owner</li>
-          <li>Passionate about learning, family, and service</li>
-          <li>I enjoy baking, cooking, volunteering, and building community</li>
-        </ul>
-      </div>
-    </div>
+  <section class="meet-owner">
+  <img src="Images/Angel-Tibbs.jpg" alt="Angel Tibbs" class="owner-photo">
+  <div class="owner-bio">
+    <p>
+      As the founder and director of Alabasteria Cleaning Services, I believe that care is just as important as consistency.
+      I’ve always believed that a clean space isn’t just about making things look nice — it’s about creating a safe, healthy,
+      and productive environment where people feel respected.
+    </p>
+    <p>
+      I started this company alongside my family, inspired by my mom’s more than 10 years of experience in the cleaning industry.
+      From the very beginning, I’ve been involved in every part of the business — from scheduling and operations to hands-on training
+      — to make sure we deliver the kind of service I would want for my own community.
+    </p>
+    <p>
+      My promise to you is simple: we’ll treat your space like it matters — because it does. We’ll listen, adapt, and always
+      show up ready to give you our best.
+    </p>
   </div>
+  <div class="owner-resume">
+      <h4>About Me</h4>
+      <ul>
+        <li>Associate’s Degree in Pre-Nursing – Fullerton College (2024)</li>
+        <li>Certificate in Small Business Growth – San Diego Continuing Education</li>
+        <li>Current Nursing Student – San Diego City College</li>
+        <li>Self-taught business owner</li>
+        <li>Passionate about learning, family, and service</li>
+        <li>I enjoy baking, cooking, volunteering, and building community</li>
+      </ul>
+    </div>
 </section>
 
     </div>
+
+<div class="back-to-home">
+  <a href="index.html" class="btn-home">← Back to Home</a>
+</div>
 
 <footer>
   &copy; 2024 Alabasteria Cleaning Services. All rights reserved.<br>
   <small>Hours: Mon–Fri 8am–6pm | Sat Closed | Sun 9am-1pm</small>
 </footer>
+<button id="backToTop" title="Back to top">↑ Top</button>
+<script>
+  // Get the button
+  const backToTop = document.getElementById('backToTop');
+
+  // Show button when scroll is more than 300px
+  window.onscroll = function() {
+    if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+      backToTop.style.display = "block";
+    } else {
+      backToTop.style.display = "none";
+    }
+  };
+
+  // Click to scroll to top
+  backToTop.onclick = function() {
+    window.scrollTo({
+      top: 0,
+      behavior: 'smooth'
+    });
+  };
+</script>
 </body>
 </html>
