--- a/contact.html
+++ b/contact.html
@@ -82,9 +82,35 @@
     window.jotformEmbedHandler("iframe[id='JotFormIFrame-251877975036168']", "https://form.jotform.com/");
   </script>
 
+<div class="back-to-home">
+  <a href="index.html" class="btn-home">← Back to Home</a>
+</div>
+
   <footer>
   &copy; 2024 Alabasteria Cleaning Services. All rights reserved.<br>
   <small>Hours: Mon–Fri 8am–6pm | Sat 9am–2pm | Sun Closed</small>
 </footer>
+<button id="backToTop" title="Back to top">↑ Top</button>
+<script>
+  // Get the button
+  const backToTop = document.getElementById('backToTop');
+
+  // Show button when scroll is more than 300px
+  window.onscroll = function() {
+    if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+      backToTop.style.display = "block";
+    } else {
+      backToTop.style.display = "none";
+    }
+  };
+
+  // Click to scroll to top
+  backToTop.onclick = function() {
+    window.scrollTo({
+      top: 0,
+      behavior: 'smooth'
+    });
+  };
+</script>
 </body>
 </html>
