--- a/services.html
+++ b/services.html
@@ -109,9 +109,35 @@
     </section>
 </div>
 
+<div class="back-to-home">
+  <a href="index.html" class="btn-home">← Back to Home</a>
+</div>
+
     <footer>
   &copy; 2024 Alabasteria Cleaning Services. All rights reserved.<br>
   <small>Hours: Mon–Fri 8am–6pm | Sat Closed | Sun 9am-1pm</small>
 </footer>
+<button id="backToTop" title="Back to top">↑ Top</button>
+<script>
+  // Get the button
+  const backToTop = document.getElementById('backToTop');
+
+  // Show button when scroll is more than 300px
+  window.onscroll = function() {
+    if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+      backToTop.style.display = "block";
+    } else {
+      backToTop.style.display = "none";
+    }
+  };
+
+  // Click to scroll to top
+  backToTop.onclick = function() {
+    window.scrollTo({
+      top: 0,
+      behavior: 'smooth'
+    });
+  };
+</script>
 </body>
 </html>
