--- a/index.html
+++ b/index.html
@@ -197,8 +197,10 @@
     </div>
 <footer>
   &copy; 2024 Alabasteria Cleaning Services. All rights reserved.<br>
-  <small>Hours: Mon–Fri 8am–6pm | Sat Closed | Sun 9am-1pm</small>
+  <small>Hours: Mon–Fri 8am–6pm | Sat Closed | Sun 9am-1pm</small><br>
+  <a href="privacy.html">Privacy Policy</a> 
 </footer>
+
 <button id="backToTop" title="Back to top">↑ Top</button>
 <script>
   const headers = document.querySelectorAll('.accordion-header');
