Changing <titles> and adding pop up

--- a/about.html
+++ b/about.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>About Us | Alabasteria Cleaning Services</title>
+    <meta name="description" content="Learn more about Alabasteria Cleaning Services, our mission, and why we’re trusted for quality cleaning solutions." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alabasteria Cleaning Services</title>
     <link rel="icon" href="Images/Logo-3.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
