--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us – Alabasteria Cleaning Services</title>
+  <title>Contact Us | Alabasteria Cleaning Services</title>
+  <meta name="description" content="Contact Alabasteria Cleaning Services for a free cleaning estimate. Reach out for top-quality cleaning solutions for your home or business." />
   <link rel="icon" href="Images/Logo-3.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
+  
       <div class="container2">
         <img src="Images/Logo.png" alt="Alabasteria Cleaning Services Logo" class="logo">
         <div class="header-content">
@@ -91,6 +93,7 @@
   <small>Hours: Mon–Fri 8am–6pm | Sat 9am–2pm | Sun Closed</small>
 </footer>
 <button id="backToTop" title="Back to top">↑ Top</button>
+
 <script>
   // Get the button
   const backToTop = document.getElementById('backToTop');
@@ -112,5 +115,6 @@
     });
   };
 </script>
+
 </body>
 </html>
