--- a/services.html
+++ b/services.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alabasteria Cleaning Services</title>
+    <title>Services | Alabasteria Cleaning Services</title>
+    <meta name="description" content="Explore Alabasteria Cleaning Services — from deep cleaning to office cleaning, we offer custom solutions to meet your needs." />
     <link rel="icon" href="Images/Logo-3.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -101,7 +102,7 @@
         </p>
         <p>
             Learn more about what sets us apart on our 
-            <a href="why-choose-us.html" class="why-us-link">Why Choose Us</a> page.
+            <a href="why.html" class="why-us-link">Why Choose Us</a> page.
         </p>
     </section>
 
