--- a/why.html
+++ b/why.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alabasteria Cleaning Services</title>
+    <title>Why Us? | Alabasteria Cleaning Services</title>
+    <meta name="description" content="Discover why Alabasteria Cleaning Services is the trusted choice for professional, affordable cleaning. Experience the difference today." />
     <link rel="icon" href="Images/Logo-3.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
