--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alabasteria Cleaning Services</title>
+    <title>Home | Alabasteria Cleaning Services</title>
+    <meta name="description" content="Alabasteria Cleaning Services: Affordable, reliable residential and commercial cleaning services in San Diego, CA. Get a sparkling clean space today!" />
     <link rel="icon" href="Images/Logo-3.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -202,6 +203,10 @@
 </footer>
 
 <button id="backToTop" title="Back to top">↑ Top</button>
+<!-- Begin Constant Contact Active Forms -->
+<script> var _ctct_m = "e7674f83deff424fa95206a63286ad4a"; </script>
+<script id="signupScript" src="//static.ctctcdn.com/js/signup-form-widget/current/signup-form-widget.min.js" async defer></script>
+<!-- End Constant Contact Active Forms -->
 <script>
   const headers = document.querySelectorAll('.accordion-header');
 
@@ -243,6 +248,7 @@
       behavior: 'smooth'
     });
   };
+
 </script>
 </body>
 </html>
