--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Read Alabasteria Cleaning Services' privacy policy. We respect your data and keep your information secure." />
   <title>Privacy Policy | Alabasteria Cleaning Services</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
