--- a/about.html
+++ b/about.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2Y312FEV8K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2Y312FEV8K');
+</script>
     <meta charset="UTF-8">
     <title>About Us | Alabasteria Cleaning Services</title>
     <meta name="description" content="Learn more about Alabasteria Cleaning Services, our mission, and why we’re trusted for quality cleaning solutions." />
