--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="why.html">Why Us?</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html" class="btn">Contact Us</a></li>
             </ul>
           </nav>
