--- a/gallery.html
+++ b/gallery.html
@@ -59,6 +59,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       transform: translateX(5px);
     }
   </style>
+  <script id="vtag-ai-js" async src="https://r2.leadsy.ai/tag.js" data-pid="tVbFJaAp60kP2rGO" data-version="062024"></script>
 </head>
 
 <body>
