--- a/services.html
+++ b/services.html
@@ -23,6 +23,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="description" content="Explore Alabasteria Cleaning Services — from deep cleaning to office cleaning, we offer custom solutions to meet your needs." />
     <link rel="icon" href="Images/Logo-3.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+    <script id="vtag-ai-js" async src="https://r2.leadsy.ai/tag.js" data-pid="tVbFJaAp60kP2rGO" data-version="062024"></script>
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
