--- a/gallery.html
+++ b/gallery.html
@@ -89,7 +89,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <input type="checkbox" id="navToggler" class="navToggler">
           <nav>
             <ul>
-                <li><a href="#index">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="why.html">Why Us?</a></li>
